--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p><span>&lt;</span>Technical Documentation<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
-            <img https="//i.postimg.cc/vTtQVR8L/cafemenu.jpg" alt="">
+            <img src="cafemenu.jpg" alt="">
             <p><span>&lt;</span>Cafe Menu<span>/&gt;</span></p>
         </a>
     </div>
