--- a/index.html
+++ b/index.html
@@ -34,30 +34,37 @@
     </section>
     <section id="projects">
         <h1>These are some of my projects</h1>
-        <div class="projects"><a href="" class="project-tile">
+        <div class="projects">
+          <a href="https://github.com/abhis1305/fcc-Product-landing-page" target="_blank" class="project-tile">
             <img src="productlandingpage.jpg" alt="">
-            <p><span>&lt;</span>Product Landing Page<span>/&gt;</span></p>
-        </a>
-        <a href="" class="project-tile">
+            <p><span>&lt;</span>Product Landing Page.<span>/&gt;</span></p>
+            <p id="des">Press the image for code on Github.</p>
+          </a>
+          <a href="https://github.com/abhis1305/fcc-Tribute-page" target="_blank" class="project-tile">
             <img src="tributepage.jpg" alt="">
-            <p><span>&lt;</span>Tribute Page<span>/&gt;</span></p>
-        </a>
-        <a href="" class="project-tile">
+            <p><span>&lt;</span>Tribute Page.<span>/&gt;</span></p>
+            <p id="des">Press the image for code on Github.</p>
+          </a>
+          <a href="https://github.com/abhis1305/fcc-Registration-Form" target="_blank" class="project-tile">
             <img src="registrationform.jpg" alt="">
-            <p><span>&lt;</span>Registration Form<span>/&gt;</span></p>
-        </a>
-        <a href="" class="project-tile">
+            <p><span>&lt;</span>Registration Form.<span>/&gt;</span></p>
+            <p id="des">Press the image for code on Github.</p>
+          </a>
+          <a href="https://github.com/abhis1305/fcc-Skyline" target="_blank" class="project-tile">
             <img src="cityskyline.jpg" alt="">
-            <p><span>&lt;</span>City Skyline<span>/&gt;</span></p>
-        </a>
-        <a href="" class="project-tile">
+            <p><span>&lt;</span>City Skyline.<span>/&gt;</span></p>
+            <p id="des">Press the image for code on Github.</p>
+          </a>
+          <a href="https://github.com/abhis1305/fcc-Technical-Documentation" target="_blank" class="project-tile">
             <img src="techdocumentation.jpg" alt="">
-            <p><span>&lt;</span>Technical Documentation<span>/&gt;</span></p>
-        </a>
-        <a href="" class="project-tile">
+            <p><span>&lt;</span>Technical Documentation.<span>/&gt;</span></p>
+            <p id="des">Press the image for code on Github.</p>
+          </a>
+          <a href="https://github.com/abhis1305/fcc-Cafe-Menu" target="_blank" class="project-tile">
             <img src="cafemenu.jpg" alt="">
-            <p><span>&lt;</span>Cafe Menu<span>/&gt;</span></p>
-        </a>
+            <p><span>&lt;</span>Cafe Menu.<span>/&gt;</span></p>
+            <p id="des">Press the image for code on Github.</p>
+          </a>
     </div>
     <a href="" class="show-all">Show All <i class="ri-arrow-right-s-fill"></i></a>      
     </section>
@@ -67,7 +74,7 @@
         <div class="social-medias">
             <a href="https://www.linkedin.com/in/abhishek-singh-819989285/" target="_blank" class="social-media" id="profile-link"><i class="ri-linkedin-box-fill ri-2x"></i><p>Linkedin</p></a>
             <a href="https://github.com/abhis1305" target="_blank" class="social-media"><i class="ri-github-fill ri-2x"></i><p>Github</p></a>
-            <a href="https://www.freecodecamp.org/Abhishek-Singh1305" target="_blank" class="social-media"><i class="ri-fire-fill ri-2x"></i><p>FreeCodeCamp</p></a>
+            <!-- <a href="https://www.freecodecamp.org/Abhishek-Singh1305" target="_blank" class="social-media"><i class="ri-fire-fill ri-2x"></i><p>FreeCodeCamp</p></a> -->
             <a href="https://twitter.com/Abhishe61040389" target="_blank" class="social-media"><i class="ri-twitter-fill ri-2x"></i><p>Twitter</p></a>
             <a href="" target="_blank" class="social-media"><i class="ri-at-line ri-2x"></i><p>Send a mail</p></a>
         </div>
